[package]
name = "cols"
description = "A faster `colcon list` replacement for fuzzy-finders"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "ISC"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
itertools = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
